# luks-enroll

./: .gitignore  ADOPTING.md  AGENT_PROMPT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  RUST_MIGRATION.md  SECURITY_REVIEW_PROMPT.md  STANDARD.md  install  install.sh  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  hardware_compatibility.yml  task.yml
.github/actions/install-c-deps/: action.yml
.github/actions/python-setup/: action.yml
.github/workflows/: audit.yml  autotag.yml  build-release.yml  ci.yml  dev-build.yml  pr-test-build.yml  release.yml
data/: com.contemno.LuksEnroll.service  com.contemno.LuksEnroll.systemd.service  com.contemno.luks-enroll.policy  com.contemno.luks_enroll.conf
dbus/: net.contemno.LuksEnroll1.xml
debian/: changelog  control  copyright  luks-enroll.install  luks-enroll.postinst  luks-enroll.prerm  rules
rust/: Cargo.toml
rust/fido2-sys/: Cargo.toml  build.rs
rust/fido2-sys/src/: lib.rs
rust/service/: Cargo.toml
rust/service/src/: constants.rs  devices.rs  error.rs  fido2.rs  format.rs  lib.rs  luks.rs  main.rs  recovery.rs  service.rs  settings.rs  tpm2.rs
rust/service/tests/: config_parity.rs  dbus_e2e.rs  fd_ops.rs  luks_image.rs
rust/service/tests/common/: mod.rs
scripts/: gen-changelog.sh  install-hooks.sh  next-version.sh
src/: luks-enroll-service.py  luks-enroll.py
tests/: conftest.py  test_luks_enroll.py  test_workflows.py
