[package]
name = "luks-enroll-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Privileged D-Bus system service for LUKS enrollment (net.contemno.LuksEnroll)"

[lib]
name = "luks_enroll_service"
path = "src/lib.rs"

[[bin]]
name = "luks-enroll-service"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
fido2-sys = { version = "0.1.0", path = "../fido2-sys" }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
getrandom = "0.4.2"
gpt = "4.1.0"
libblkid-rs = "0.4.2"
libblkid-rs-sys = "0.3.1"
libc = "0.2.186"
libcryptsetup-rs = { version = "0.16.0", features = ["mutex"] }
nix = { version = "0.30", features = ["fs", "ioctl", "user"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tss-esapi = "7.7.0"
zbus = { version = "5", default-features = false, features = ["tokio"] }
zbus_polkit = "5.0.0"
zeroize = "1.9.0"

[dev-dependencies]
nix = { version = "0.30", features = ["mount", "sched", "process"] }
tempfile = "3.27.0"
